[package]
name = "rejoin_slice"
version = "1.0.0"
authors = ["Pyry Kontio <pyry.kontio@drasa.eu>"]
edition = "2018"
description = "This crate provides functions to join two slices that are adjacent in memory."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
