[package]
name = "rejoin_slice"
version = "1.0.3"
authors = ["Pyry Kontio <pyry.kontio@drasa.eu>"]
edition = "2018"
description = "This crate provides functions to join two slices that are adjacent in memory."
license = "MIT"
repository = "https://github.com/golddranks/rejoin_slice"
documentation = "https://docs.rs/rejoin_slice/"

[dependencies]
